<resources>
    <string name="app_name">Baking App</string>
    <string name="placeholder_img_content_description">Placeholder image which is showing a muffin.</string>
    <string name="contentDescription_Recipe_Image">Image associated to the recipe.</string>
    <string name="previous_step_button_label">Previous Step</string>
    <string name="next_step_button_label">Next Step</string>
    <string name="title_text_view_placeholder_txt">Step Title</string>
    <string name="step_short_description_text_view_placeholder_txt">Short description of this step</string>
    <string name="ingredients_button_label">Ingredients</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="content_description_widget_default_image">Placeholder Image for the Baking App Widget</string>
    <string name="fake_widget_title">Widget Title</string>
    <string name="empty_view_text">No Data available</string>
    <string name="last_viewed_recipe_id_key">at.stefanirndorfer.bakingapp.lastVisitedRecipeId</string>
    <string name="last_viewed_recipe_id_file_name">at.stefanirndorfer.bakingapp.sharedprefsLastSeenRecipeFile</string>
    <string name="view_ingredients_label">View Ingredients</string>
    <string name="ingredients_text">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="spoon_graphic">Spoon Graphic</string>
    <string name="placeholder_img_for_step_thumbnail">Image of a muffin</string>
</resources>
