<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <!--
        <import type="android.view.View" />
        -->
        <variable
            name="viewModel"
            type="at.stefanirndorfer.bakingapp.viewmodel.MainViewModel" />
    </data>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_recipes_list_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:adjustViewBounds="true"
            android:gravity="center"
            android:horizontalSpacing="8dp"
            android:padding="16dp" />
    </LinearLayout>

</layout>