<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="at.stefanirndorfer.bakingapp.viewmodel.StepsViewModel">
        </variable>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:text="@string/steps" />

        <!-- start Ingredients button -->
        <Button
            android:id="@+id/ingredients_bt"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="16dp"
            android:onClick="onIngredientsButtonClicked"
            android:text="@string/ingredients_button_label" />
        <!-- end Ingredients button -->

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_steps_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:adjustViewBounds="true"
            android:gravity="center"
            android:horizontalSpacing="8dp"
            android:padding="16dp" />


    </LinearLayout>


</layout>